--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -1,6 +1,12 @@
-.App{
-    
-    background-color: #c98b8b;
-    height:100px;
-    width: 100px;
-}
+// Import the Roboto font
+@font-face {
+    font-family: 'Roboto';
+    src: url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  // Apply the Roboto font family to elements
+  body {
+    font-family: 'Roboto', sans-serif;
+  }
