--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -10,3 +10,10 @@
   body {
     font-family: 'Roboto', sans-serif;
   }
+  
+  @media screen and (max-width: 700px) {
+    .MainPageContainer {
+      width: 100% !important;
+    }
+  }
+ 
