--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -62,3 +62,13 @@
   justify-content: space-around;
   margin-top: 20px;
 }
+.ptag{
+margin: 0px 0px 10px;
+    font-size: 16px;
+    overflow: hidden;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    padding: 0px !important;
+}
